--- a/cv.yml
+++ b/cv.yml
@@ -1,5 +1,19 @@
 --- 
-rubizza_quest: 
-  goal: "I want to develop as a ruby developer"
+  rubizza_quest: 
+    age: 19
+    education: "BSUIR faculty of computer-aided design"
+    english: B1
+    full_name: "Filipenko Maksim"
+    goal: "I want to develop as a ruby developer"
+    have_a_job: false
+    hours_per_day: 10
+    laptop: true
+    phone_number: 375291433931
+    programming_languages: 
+      - Ruby
+      - HTML/CSS
+      - JS
+      - C++
+
 
    
