--- a/cv.yml
+++ b/cv.yml
@@ -4,7 +4,7 @@
     english: B1
     full_name: "Filipenko Maksim"
     goal: "I want to develop as a ruby developer"
-    have_a_job: yes
+    have_a_job: yes linux
     hours_per_day: 10
     laptop: no
     phone_number: 375291433931
