--- a/cv.yml
+++ b/cv.yml
@@ -4,9 +4,9 @@
     english: B1
     full_name: "Filipenko Maksim"
     goal: "I want to develop as a ruby developer"
-    have_a_job: yes linux
+    have_a_job: "yes, linux"
     hours_per_day: 10
-    laptop: no
+    laptop: "no"
     phone_number: 375291433931
     programming_languages: 
       - Ruby
